@@ -142,16 +142,33 @@ ExportSpreadsheetDialog::~ExportSpreadsheetDialog() {
 	KWindowConfig::saveWindowSize(windowHandle(), conf);
 }
 
+/*!
+ * sets the current project file name. If not empty, the path of the project file
+ * is determined that is then used as the default location for the exported file.
+ */
+void ExportSpreadsheetDialog::setProjectFileName(const QString& name) {
+	if (name.isEmpty())
+		return;
+
+	QFileInfo fi(name);
+	m_projectPath = fi.dir().canonicalPath();
+}
+
 void ExportSpreadsheetDialog::setFileName(const QString& name) {
-	KConfigGroup conf(KSharedConfig::openConfig(), "ExportSpreadsheetDialog");
-	QString dir = conf.readEntry("LastDir", "");
-	if (dir.isEmpty()) { // use project dir as fallback
-		KConfigGroup conf2(KSharedConfig::openConfig(), "MainWin");
-		dir = conf2.readEntry("LastOpenDir", "");
-		if (dir.isEmpty())
-			dir = QDir::homePath();
-	}
-	ui->leFileName->setText(dir + QLatin1Char('/') + name);
+	if (m_projectPath.isEmpty()) {
+		// no project folder is available (yet), use the last used directory in this dialog
+		KConfigGroup conf(KSharedConfig::openConfig(), "ExportSpreadsheetDialog");
+		QString dir = conf.readEntry("LastDir", "");
+		if (dir.isEmpty()) { // use project dir as fallback
+			KConfigGroup conf2(KSharedConfig::openConfig(), "MainWin");
+			dir = conf2.readEntry("LastOpenDir", "");
+			if (dir.isEmpty())
+				dir = QDir::homePath();
+		}
+		ui->leFileName->setText(dir + QLatin1Char('/') + name);
+	} else
+		ui->leFileName->setText(m_projectPath + QLatin1String("/") + name);
+
 	this->formatChanged(ui->cbFormat->currentIndex());
 }
 
